@@ -1,7 +1,13 @@
-17 September 2007
+18 September 2007
 
+* Modify "match string" syntax. Instead of "to", an operator, ==, != or ~=
+  may appear. The first two do direct string comparison, and the latter uses
+  a regexp. Using "to" is still supported.
 * Change POP3 old/new mail to work from a list of mail-to-fetch and only ask
   for that mail, rather than retrieving and checking every mail UID.
+
+17 September 2007
+
 * Quote IMAP folder name to allow spaces and so on. SF bug 1791056.
 
 05 September 2007
@@ -648,4 +654,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.161 2007-09-18 09:24:30 nicm Exp $
+$Id: CHANGES,v 1.162 2007-09-18 12:24:11 nicm Exp $
